# seperating-sprite-image

./: README.md  pyproject.toml
src/: main.py
